--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -18,6 +18,7 @@ h3 {
 }
 
 p {
+  padding: 1.5em;
   margin-bottom: 20px; /* Adjust the margin to increase or decrease the space */
 }
 
@@ -75,6 +76,14 @@ p {
   text-align: center;
 }
 
+#rsvpFrom > h3 {
+  text-align: center;
+}
+
+#rsvpFrom > p {
+  text-align: center;
+}
+
 .form-group {
   text-align: left;
 }
@@ -104,7 +113,6 @@ p {
   text-align: center;
   max-width: 1000px;
   margin: auto;
-  word-break: break-all;
 }
 
 .praktiskinfo-text {
@@ -119,7 +127,6 @@ p {
   text-align: center;
   max-width: 1000px;
   margin: auto;
-  word-break: break-all;
 }
 
 .overnatting-text {
