--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -133,6 +133,17 @@ p {
   margin-bottom: 2em;
 }
 
+.kart-container {
+  justify-content: center;
+}
+
+.kart-content {
+  text-align: center;
+  max-width: 1000px;
+  margin: auto;
+  padding-bottom: 4em;
+}
+
 .extra-space {
   height: 20px; /* Adjust the height to increase or decrease the space */
 }
